--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,37 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--
-     Frank Sinatra
-
-  "The old crooner himself:"
-       QB"   .  . ....^FBQQBQBQ
-       #^   ..../,, ,/yyBQBDBt`"B
-     B"  ._L_yQ&Qy&&QQBQQDlL;S; (Q
-    B^   /DQQQBQQQQQQBQBDQQD1:   "B
-   Q~   ,GQBDQDQQQQQQBBQQDQ&EC    7B
-   D    lQQQQQBQBQQQQQQQQBBID('    {
-   E   .iDDBQQBQQQQBBBQBQQDQ1!:    (
-   3   .(BQBBQBBQQQQBBQBBBDBS'     }                     I'm
-   Q   '~~<MMBQQBBQBP"""<BD1EL.    Q                   dreaming
-   Q    LuL `7QBBB?../LL;.!JDL     Q                    of a
-  "  ,  ,__&L.DBBEEL1L_,'EylEE!  ,U                     white
-  1 :s&yyQQQ6-DQBBQ&QQQQQQQQJY!  lyB1Q                Christmas.
-  S  ?DDQQBD'.QQBDQDBQBQQQDD1<  LIQDG
-  Q   j8BQE2 LQQBE9EBBEBQQES{! /BQSE
-   Q_ 'TS7L  <#P~^,G1?TXC3({!  3PEy
-    Q, ,_>'.,___yBD1DU;,'('''  yQ
-     L "Qy,  'IIIZl',L/&;!;:  LQ
-     Q; FD(  (`IE2L/QDB&lY!   6Q
-      Q, (/. `!?"21iQDU&/~   L FB
-       Q_ (EL/&&QDBQBDJ"   ,y^  `FB
-        Qy 75EEBBQESf`   _yB^      "M
-        Q7  `'^""~`   _yQQM'         `"FQ
-        F;         _yQQQQF              Q
-  -->
+    <meta charset="utf-8">
+    <title>Sinatra NYC</title>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   </head>
   <body>
     <%= yield %>
   </body>
-
 </html>
